[project]
name = "tools_agent"
version = "0.1.0"
description = "LangGraph tools agent with MCP and a RAG tool"
authors = [
  { name = "langchain-ai" },
]
requires-python = ">=3.11.0,<3.13"

dependencies = [
  "langgraph>=0.6.2",           # Updated to newer version
  "langchain-anthropic>=0.3.18",
  "langchain-core>=0.3.72", 
  "langchain-openai>=0.3.28",
  "pydantic==2.11.3",
  "langchain>=0.3.27",
  "mcp>=1.9.1",                 # Updated MCP version
  "supabase>=2.15.1",
  "aiohttp>=3.8.0"
]

[tool.setuptools]
# Explicitly specify only the tools_agent package
packages = ["tools_agent"]

[tool.setuptools.package-dir]
# Make sure setuptools knows where to find the package
"" = "."

[tool.setuptools.package-data]
# Include any additional files in tools_agent if needed
"tools_agent" = ["**/*.py", "**/*.json", "**/*.yaml", "**/*.yml"]

[dependency-groups]
dev = [
  "langgraph-cli[inmem]>=0.3.6",
  "ruff>=0.8.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"